argocd/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-test-ingress
  namespace: bluegreen-test
  annotations:
    alb.ingress.kubernetes.io/load-balancer-name: "test-alb-bg"
    alb.ingress.kubernetes.io/ncloud-loadbalancer-retain-public-ip-on-termination: "true"
    alb.ingress.kubernetes.io/description: "test-alb-blue-green"
    alb.ingress.kubernetes.io/public-ip-instance-no: "114531823"
spec:
  ingressClassName: alb
  rules:
  - http:
      paths:
      - path: /active 
        pathType: Prefix
        backend:
          service:
            name: rollout-bluegreen-active 
            port:
              number: 8080
      - path: /preview
        pathType: Prefix
        backend:
          service:
            name: rollout-bluegreen-preview
            port:
              number: 8080
